# ttygoLcoreKcore

./: .gitignore
TTYGOLCoreKCore/: .editorconfig  TTYGOLCoreKCore.sln  TTYGOLCoreKCore.vgdbproj  sdkconfig  sdkconfig.old
TTYGOLCoreKCore/TTYGOLCoreKCore/: CMakeLists.txt  TTYGOLCoreKCore.sln  TTYGOLCoreKCore.vgdbproj  sdkconfig  sdkconfig.old
TTYGOLCoreKCore/TTYGOLCoreKCore/main/: CMakeLists.txt  RevisionHistory.h  configure.h  main.c  main.h
TTYGOLCoreKCore/TTYGOLCoreKCore/main/k_core/: K_Core.c  K_Core.h  taskmanager.c  taskmanager.h
TTYGOLCoreKCore/TTYGOLCoreKCore/main/k_core/communication/: communication.c  communication.h  parser.c
TTYGOLCoreKCore/TTYGOLCoreKCore/main/k_core/execution/: bcode.c  bcode.h  cmdprocessor.c
TTYGOLCoreKCore/TTYGOLCoreKCore/main/k_core/gpio/: pinout.h
TTYGOLCoreKCore/TTYGOLCoreKCore/main/k_core/tools/: tools.c  tools.h
TTYGOLCoreKCore/TTYGOLCoreKCore/main/l_core/bluetooth/: ble-client.c  ble-server.c  ble.c  ble.h
TTYGOLCoreKCore/TTYGOLCoreKCore/main/l_core/lcd/: lcd.c  lcd.h
TTYGOLCoreKCore/TTYGOLCoreKCore/main/l_core/ui/: ui.c  ui.h  ui_log.c  ui_log.h
TTYGOLCoreKCore/main/: CMakeLists.txt  RevisionHistory.h  configure.h  main.c  main.h
TTYGOLCoreKCore/main/K_Core/: K_Core.c  taskmanager.c
TTYGOLCoreKCore/main/K_Core/communication/: communication.c  communication.h  parser.c  parser.c~RF587032.TMP  parser.h
TTYGOLCoreKCore/main/K_Core/display/: DisplayCagetoryList.c  DisplayCagetoryList.h  DisplayList.c  DisplayList.h
TTYGOLCoreKCore/main/K_Core/execution/: bcode.c  can.c  can.h  cmdprocessor.c  cmdprocessor.h  mcode.c  mcode.h  sequence.c  sequence.h
TTYGOLCoreKCore/main/K_Core/gpio/: GPIO.c  GPIO.h  pinout.h
TTYGOLCoreKCore/main/K_Core/serial/: serial.c  serial.h
TTYGOLCoreKCore/main/K_Core/tools/: tools.c  tools.h
TTYGOLCoreKCore/main/L_Core/bluetooth/: ble-client.c  ble-server.c  ble.c  ble.h
TTYGOLCoreKCore/main/L_Core/devices/: display_7789v.c  display_7789v.h
TTYGOLCoreKCore/main/L_Core/open62541/: opc.c  opc.h
TTYGOLCoreKCore/main/L_Core/sd-card/: sd-card.h
TTYGOLCoreKCore/main/L_Core/server/: parse.c  server.c
TTYGOLCoreKCore/main/L_Core/storage/: nvs.c
TTYGOLCoreKCore/main/L_Core/ui/: ui-variables.c  ui-variables.h  ui.c  ui.h
TTYGOLCoreKCore/main/L_Core/wifi/: wifi.c  wifi.h
