idf_component_register(
                SRCS
                	main.c
                	L_Core/wifi/wifi.c
                	L_Core/server/server.c
                	L_Core/server/parse.c
                	L_Core/storage/partition.c
                    L_Core/storage/nvs.c
                	L_Core/bluetooth/ble.c
                	L_Core/bluetooth/ble-server.c
                	L_Core/bluetooth/ble-client.c
                	K_Core/K_Core.c
                	K_Core/gpio/GPIO.c
                	K_Core/taskmanager.c
                	K_Core/gpio/GPIO.c
                	K_Core/K_Core.c
                	K_Core/taskmanager.c
                	K_Core/display/DisplayList.c
                	K_Core/serial/serial.c
                	K_Core/adc/adc.c
                	K_Core/adc/adc-table.c
                	K_Core/display/DisplayCagetoryList.c
                	K_Core/communication/communication.c
                	K_Core/communication/parser.c
                	K_Core/execution/bcode.c
                	K_Core/execution/cmdprocessor.c
                	K_Core/tools/tools.c
                INCLUDE_DIRS "."
                REQUIRES
                    nvs_flash
                	app_update
                	esp_https_ota
                	esp_event
                	esp_timer
                	spi_flash
                	esp_wifi
                	esp_partition
                	esp_hw_support
                	bt
                	fatfs)            
